# stock-thing

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml  render.yaml  requirements.txt  transformernotes.md
backend/: config.py
backend/api/: auth.py  deps.py  main.py  quotes.py  schemas.py  valuation.py
backend/api/routers/: portfolio.py  rankings.py  tickers.py
backend/db/: rls.sql  schema.sql  seed_tickers.sql
backend/db/migrations/: 001_headlines_score_date.sql  002_analyst_estimates.sql  003_ingestion_runs_skipped_status.sql  004_analyst_estimates_eps.sql  (+6 more)
backend/ingestion/: calendar.py  db.py  estimates.py  fundamentals.py  headlines.py  prices.py  short_interest.py
backend/jobs/: add_ticker.py  daily_pipeline.py  promote_model.py
backend/ml/: compare_transformer_gbm.py  dataset.py  features.py  gbm_baseline.py  gbm_inference.py  model.py  train.py
backend/tests/: test_add_ticker.py  test_api.py  test_dataset.py  test_estimate_features.py  test_estimates.py  test_features_no_lookahead.py  test_frame_cache.py  test_fundamentals_parser.py  test_gbm_baseline.py  test_model.py  test_prices_drift.py  test_sentiment_bucketing.py  test_train.py
deploy/launchd/: com.stockthing.daily-pipeline.plist
frontend/: .env.example  package-lock.json  package.json
scripts/: _inspect_fundamentals.py  _inspect_prices.py  _probe_lseg.py  backfill_ciks.py  backfill_estimates.py  backfill_fundamentals.py  backfill_prices.py  backfill_sentiment.py  backfill_short_interest.py  measure_egress.py  seed_sp500.py  seed_sp500_historical.py
(+32 files in other folders)
