[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-thing"
version = "0.0.1"
description = "Personal long-only stock and ETF trend prediction app."
requires-python = ">=3.11"
readme = "CLAUDE.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "supabase>=2.7",
    "pyjwt[crypto]>=2.9",
]

[project.optional-dependencies]
ingestion = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "pandas-market-calendars>=4.4",
    "sec-edgar-downloader>=5.0",
    "lseg-data>=2.0",
]
ml = [
    "torch>=2.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "transformers>=4.44",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency injection requires Depends()/Query() in argument defaults.
"backend/api/**" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
